@@ -552,6 +552,9 @@ BUGFIXES:
 
   ZOOKEEPER-1319. Missing data after restarting+expanding a cluster.
   (Patrick Hunt and Ben Reed via mahadev)
+  
+  ZOOKEEPER-1576. Zookeeper cluster - failed to connect to cluster if one of the 
+  provided IPs causes java.net.UnknownHostException (Edward Ribeiro via camille)
 
   ZOOKEEPER-1269. Multi deserialization issues (Camille Fournier via 
   mahadev)
